...
            .accessibilityIdentifier("source-detail")
            .navigationTitle(Text("source.detail.title"))
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button("action.done", action: dismiss.callAsFunction)
                        .accessibilityIdentifier("source-detail-done")
                }
            }
        }
    }

    @ViewBuilder
...
